# test-poetry-package

./: pyproject.toml
defg/: __init__.py  insight.py
