[tool.poetry]
name = "test-poetry-package"
version = "0.1.0"
description = ""
authors = ["grimmer <grimmer0125@gmail.com>"]

packages = [
    { include = "defg", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version = "^1.21.4", python = ">=3.9,<3.11"}

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
